# ivrobust

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_CHECKLIST.md  IVROBUST_MASTER_PLAN.md  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  ivrobust_implementation_appendix.md  jupytext.toml  mkdocs.yml  objects.inv  pyproject.toml  references.bib  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: 404.html  faq.md  index.html  index.md  notebooks.md  quickstart.md  references.bib  references.md  roadmap.md  sitemap.xml
docs-src/: diagnostics-interpretation.md  gallery.md  how-to-cite.md  index.md  maintainers.md  notebooks.md  parity.md  quickstart.md  references.md  replication.md  reproducibility.md  roadmap.md
docs-src/assets/: ivrobust.mplstyle
docs-src/assets/data/: rejection_vs_strength.npz  runtime_scaling.npz
docs-src/methods/: index.md
docs-src/notebooks/: 00_quickstart.ipynb  04_real_data_example.ipynb
docs-src/reference/: api.md  results_objects.md  stable_api.md
docs-src/stylesheets/: extra.css
docs-src/user-guide/: ar.md  choosing.md  clr.md  covariance.md  diagnostics.md  estimators.md  index.md  lm.md  many_instruments.md  numerics.md  plotting.md  workflow.md
docs/diagnostics-interpretation/: index.html
docs/faq/: index.html
docs/gallery/: index.html
docs/how-to-cite/: index.html
docs/javascripts/: extra.js
docs/methods/: anderson_rubin.md  index.html  index.md
docs/notebooks/: index.html
docs/notebooks/00_quickstart/: index.html
docs/notebooks/01_practitioner_workflow_single_endog/: 01_practitioner_workflow_single_endog.ipynb  index.html
docs/parity/: index.html
docs/quickstart/: index.html
docs/reference/: api.md
docs/references/: index.html
docs/replication/: index.html
docs/reproducibility/: index.html
docs/roadmap/: index.html
docs/search/: search_index.json
docs/stylesheets/: extra.css
docs/tutorials/: 01_iv_basics.md  02_ar_confidence_sets.md  03_clustered_data.md
docs/user-guide/: ar.md  clr.md  diagnostics.md  estimators.md  index.html  index.md  lm.md  many_instruments.md  plotting.md
examples/: ar_quickstart.py  clustered_ar.py  plot_style_demo.py
gallery/: index.html
how-to-cite/: index.html
maintainers/: index.html
notebooks/: 00_quickstart.ipynb  00_quickstart.py  01_core_api.ipynb  01_core_api.py  01_practitioner_workflow_single_endog.ipynb  01_practitioner_workflow_single_endog.py  02_diagnostics_and_inference.ipynb  02_diagnostics_and_inference.py  02_monte_carlo_coverage_power_weakIV.ipynb  02_monte_carlo_coverage_power_weakIV.py  03_diagnostics_effectiveF_and_stockyogo.ipynb  03_diagnostics_effectiveF_and_stockyogo.py  03_simulation_study.ipynb  03_simulation_study.py  04_many_instruments_bias_tsls_liml_fuller.ipynb  04_many_instruments_bias_tsls_liml_fuller.py  04_real_data_example.ipynb  04_real_data_example.py  05_clr_in_practice.ipynb  05_clr_in_practice.py  05_robust_vcov_hc_cluster_hac.ipynb  05_robust_vcov_hc_cluster_hac.py  06_lm_in_practice.ipynb  06_lm_in_practice.py  06_numerical_inversion_and_edge_cases.ipynb  06_numerical_inversion_and_edge_cases.py  07_heteroskedasticity_and_clustering.ipynb  07_heteroskedasticity_and_clustering.py  08_runtime_scaling.ipynb  08_runtime_scaling.py
notebooks/04_many_instruments_bias_tsls_liml_fuller/: index.html
notebooks/04_real_data_example/: index.html
notebooks/08_runtime_scaling/: index.html
parity/: index.html
quickstart/: index.html
references/: index.html
replication/: generate_golden.py
replication/data/: weak_iv_fixture.csv
replication/outputs/: golden.json
replication/r/: ivreg.R
replication/stata/: ivreg2.do
reproducibility/: index.html
scripts/: build_docs_assets.py  build_figures.py  check_links.py  sync_docs_notebooks.py
src/ivrobust/: __init__.py  _typing.py  _validation.py  ar.py  clr.py  covariance.py  data.py  diagnostics.py  estimators.py  intervals.py  lm.py  model.py  plot_style.py  plots.py  results.py  weakiv.py  weakiv_utils.py
src/ivrobust.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ivrobust/cov/: __init__.py  (+1 more)
tests/: test_ar.py  test_ar_errors.py  test_ar_vs_statsmodels.py  test_benchmarks_smoke.py  test_clr.py  test_confidence_set.py  test_covariance.py  test_data_contracts.py  test_dgp.py  test_diagnostics.py  test_docs_snippets.py  test_estimators.py  test_golden_replication.py  test_hac_inference.py  test_interval_set.py  test_invariance.py  test_inversion.py  test_linalg.py  test_lm.py  test_lm_clr.py  test_numeric_regressions.py  test_parity_ivmodels.py  test_plot_style.py  test_plotting.py  test_public_api_contract.py  test_smoke.py  test_strength_diagnostics.py  test_tsls.py  test_tsls_cluster.py  test_validation.py  test_validation_more.py  test_weakiv_inference.py
user-guide/: index.html
user-guide/clr/: index.html
user-guide/covariance/: index.html
user-guide/lm/: index.html
user-guide/numerics/: index.html
user-guide/plotting/: index.html
(+42 files in other folders)
