[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivrobust"
version = "0.1.0"
description = "Weak-instrument robust inference for linear IV/GMM."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Gabriel Saco"}]
keywords = ["econometrics", "instrumental variables", "weak instruments", "gmm"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.23", "scipy>=1.9"]

[project.optional-dependencies]
test = ["pytest>=7.4", "pytest-cov>=4.1", "ivmodels>=0.2"]
dev = ["pre-commit>=3.5", "ruff>=0.5", "mypy>=1.8", "pytest>=7.4", "pytest-cov>=4.1", "ivmodels>=0.2"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.5"]
bench = ["pandas>=1.5"]

[project.urls]
Homepage = "https://github.com/gsaco/ivrobust"
Repository = "https://github.com/gsaco/ivrobust"
Issues = "https://github.com/gsaco/ivrobust/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ivrobust = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP045"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "scipy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
